--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="#" target="_self">Contacts</strong></span></a>
       </p>
     </div>
-    <div id="main_picture"><img src="main.png" style="width: 1200px; height: 464px;"> </div>
+    <div id="main_picture"><img src="main.png" style="height: 464px;"> </div>
     <p class="icon_title_text">
       "WHAT'S FOR DINNER"<br>
       <strong><span style="font-size: 30px;">FINALLY HAS AN</span><br>
