--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head><title>main</title><meta charset="utf-8"></head>
   <style>
-    #header {height: 120px; margin-left: 50px; text-align: center;}
+    #header {height: 120px; margin-left: 100px; text-align: center;}
     a:link { color: black; text-decoration: none;}
     a:visited {color: black; text-decoration: none;}
     a:hover{color: red; text-decoration: underline;}
     #main_picture {}
     .icon_title_text {text-align: center;}
-    .icon_box {width: 1240px; text-align: center; margin-left: 40px;}
+    .icon_box {width: 1240px; text-align: center; margin-left: 60px;}
     .chefs {height: 304px; background-color: lightgrey; position: relative; top: 200px;}
   </style>
   <body>
@@ -35,7 +35,7 @@
         <a href="#" target="_self">Contacts</strong></span></a>
       </p>
     </div>
-    <div id="main_picture"><img src="main.png" style="height: 464px;"> </div>
+    <div id="main_picture"><img src="main.png" style="width: 1300px; height: 464px;"> </div>
     <p class="icon_title_text">
       "WHAT'S FOR DINNER"<br>
       <strong><span style="font-size: 30px;">FINALLY HAS AN</span><br>
@@ -64,7 +64,7 @@
       </p>
     </div>
     <div class="chefs">
-      <div style="width: 814px; height: 304px; margin-left: 200px;">
+      <div style="width: 814px; height: 304px; margin-left: 250px;">
         <p style="width: 500px; height: 100px; position: relative; bottom: 100px;">
           주방장: 오원석<br>
           저희 음식은 식재료도 신선하고 당일 모든 재료가 마감됩니다!<br>
