--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
     a:hover{color: red; text-decoration: underline;}
     #main_picture {}
     .icon_title_text {text-align: center;}
-    .icon_box {width: 1240px; text-align: center; margin-left: 60px;}
+    .icon_box {width: 1240px; text-align: center; margin-left: 100px;}
     .chefs {height: 304px; background-color: lightgrey; position: relative; top: 200px;}
   </style>
   <body>
     <div id="header">
-      <p style="width: 140px; margin-top: 60px; float: left;">
+      <p style="width: 145px; margin-top: 60px; float: left;">
         <a href="#" target="_self">How it works</a>
       </p>
-      <p style="width: 140px; margin-top: 60px; float: left;">
+      <p style="width: 145px; margin-top: 60px; float: left;">
         <a href="#" target="_self">Gifts</span></a>
       </p>
-      <p style="width: 140px; margin-top: 60px; float: left;">
+      <p style="width: 145px; margin-top: 60px; float: left;">
         <a href="about.html" target="_blank">about</span></a>
       </p>
-      <p style="width: 280px; margin-top: 33px; float: left;">
+      <p style="width: 290px; margin-top: 33px; float: left;">
         <img src="logo.png">
       </p>
-      <p style="width: 140px; margin-top: 60px; float: left;">
+      <p style="width: 145px; margin-top: 60px; float: left;">
         <a href="#" target="_self">Login</span></a>
       </p>
-      <p style="width: 140px; margin-top: 60px; float: left;">
+      <p style="width: 145px; margin-top: 60px; float: left;">
         <a href="#" target="_self">Members</span></a>
       </p>
-      <p style="width: 140px; margin-top: 60px; float: left;">
+      <p style="width: 145px; margin-top: 60px; float: left;">
         <a href="#" target="_self">Contacts</strong></span></a>
       </p>
     </div>
-    <div id="main_picture"><img src="main.png" style="width: 1300px; height: 464px;"> </div>
+    <div id="main_picture"><img src="main.png" style="width: 1340px; height: 464px;"> </div>
     <p class="icon_title_text">
       "WHAT'S FOR DINNER"<br>
       <strong><span style="font-size: 30px;">FINALLY HAS AN</span><br>
@@ -71,7 +71,7 @@
           모두들 오셔서 드셔보세요!<br>
           안 오시면 후회합니다!
         </p>
-        <p style="float: right;"><img src="chef.png" style="position: relative; bottom: 200px;"></p>
+        <p style="float: right; margin-right: 50px;"><img src="chef.png" style="position: relative; bottom: 200px;"></p>
       </div>
     </div>
   </body>
