--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <a href="#" target="_self">How it works</a>
       </p>
       <p style="width: 145px; margin-top: 60px; float: left;">
-        <a href="#" target="_self">Gifts</span></a>
+        <a href="#" target="_self">Gifts</a>
       </p>
       <p style="width: 145px; margin-top: 60px; float: left;">
-        <a href="about.html" target="_blank">about</span></a>
+        <a href="about.html" target="_blank">about</a>
       </p>
       <p style="width: 290px; margin-top: 33px; float: left;">
         <img src="logo.png">
       </p>
       <p style="width: 145px; margin-top: 60px; float: left;">
-        <a href="#" target="_self">Login</span></a>
+        <a href="#" target="_self">Login</a>
       </p>
       <p style="width: 145px; margin-top: 60px; float: left;">
-        <a href="#" target="_self">Members</span></a>
+        <a href="#" target="_self">Members</a>
       </p>
       <p style="width: 145px; margin-top: 60px; float: left;">
-        <a href="#" target="_self">Contacts</strong></span></a>
+        <a href="#" target="_self">Contacts</a>
       </p>
     </div>
     <div id="main_picture"><img src="main.png" style="width: 1200px; height: 464px;"> </div>
