--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     a:visited {color: black; text-decoration: none;}
     a:hover{color: red; text-decoration: underline;}
     #main_picture {}
-    .icon_title_text {text-align: center;}
+    .icon_title_text {text-align: center; }
     .icon_box {width: 1240px; text-align: center; margin-left: 50px;}
-    .chefs {height: 304px; background-color: lightgrey; position: relative; top: 200px;}
+    .chefs {width: 1250px; height: 304px; background-color: lightgrey; position: relative; top: 200px;}
   </style>
   <body>
     <div id="header">
@@ -36,7 +36,7 @@
       </p>
     </div>
     <div id="main_picture"><img src="main.png" style="width: 1250px; height: 464px;"> </div>
-    <p class="icon_title_text">
+    <p class="icon_title_text" style="width: 1240px;">
       "WHAT'S FOR DINNER"<br>
       <strong><span style="font-size: 30px;">FINALLY HAS AN</span><br>
       <span style="font-size: 30px;">EASY ANSWER</span><br></strong>
