--- a/about.html
+++ b/about.html
@@ -5,22 +5,30 @@
     #top {width: 1000px; height: 500px; margin: 30px 100px 0px 100px;}
     .top_left {width: 750px; height: 500px; float: left;}
     .top_right {width: 250px; height: 500px; float: right;}
+    .top_right_two {position: relative; bottom: 4px;}
     #top_box {width: 210px; height: 210px; padding-bottom: 40px; padding-right: 40px; background: green; opacity:0.5; position: relative; top: 250px;}
+    .top_intro {margin-left: 10px; position: relative; bottom: 490px; font-size: 20px;}
     #box_all {width: 1000px; margin-left: 100px; }
     .box_left {width: 750px; height: 500px;}
     .box_right {width: 210px; height: 460px; padding-bottom: 40px; padding-right: 40px; background: yellow; margin-left: 750px; float: right; position: relative; bottom: 500px;}
-    .box {width: 210px; height: 210px; padding-bottom: 40px; padding-right: 40px;}
+    .box_one {width: 210px; height: 210px; padding-bottom: 40px; padding-right: 40px;background: #6a5f58; float: left;}
+    .box_two {width: 210px; height: 210px; padding-bottom: 40px; padding-right: 40px;background: darkorange; float: left;}
+    .box_det {margin-left: 10px;}
     #footer {width: 1000px; margin-left: 100px;}
     .f_left {width: 750px; height: 40px; background: grey;}
+    .f_menu {font-size: 15px; padding-left: 20px; position: relative; bottom: 490px;}
+    .f_bar {color: darkorange;}
+    .f_right {width: 250px; height: 40px; background: pink; margin-left: 750px;float: right; position: relative; bottom: 500px;}
   </style>
   <body>
     <div id="top">
       <div class="top_left"><img src="chef_about.png"></div>
-      <div class="top_right"><img src="right1.png"><img src="right2.png" style="position: relative; bottom: 4px;"></div>
+      <div class="top_right"><img src="right1.png">
+      <div class="top_right_two"><img src="right2.png"></div></div>
       <div id="top_box">
-        <p style="margin-left: 10px; position: relative; bottom: 490px;">
-        <strong><span style="font-size: 20px;">GLOBAL</span><br>
-        <span style="font-size: 20px;">BUSINESS</span><br><br></strong>
+        <p class="top_intro">
+        <strong>GLOBAL<br>
+        BUSINESS</span><br><br></strong>
         <span style="font-size: 15px;">글로벌 비지니스<br>
         저희 음식은 자랑은 chef입니다!<br> 모두들 오셔서 체험하세요!<br>
         안 오시면 후회합니다!</p></span>
@@ -28,26 +36,25 @@
     </div>
     <div id="box_all">
       <div class="box_left">
-        <div class="box" style="background: #6a5f58; float: left;"> <p style="margin-left: 10px;">
+        <div class="box_one"> <p class="box_det">
           <strong><span style="font-size: 20px;">TITLE</span></strong><br>피자</p></div>
-        <div class="box" style="background: darkorange; float: left;"> <p style="margin-left: 10px;">
+        <div class="box_two"> <p class="box_det">
           <strong><span style="font-size: 20px;">TITLE</span></strong><br>파스타</p></div>
-        <div class="box" style="background: #6a5f58; float: left;"> <p style="margin-left: 10px;">3.</p> </div>
-        <div class="box" style="background: darkorange; float: left;"> <p style="margin-left: 10px;">4.</p></div>
-        <div class="box" style="background: #6a5f58; float: left;"> <p style="margin-left: 10px;">5.</p></div>
-        <div class="box" style="background: darkorange; float: left;"> <p style="margin-left: 10px;">6.</p></div>
+        <div class="box_one"> <p class="box_det">3.</p></div>
+        <div class="box_two"> <p class="box_det">4.</p></div>
+        <div class="box_one"> <p class="box_det">5.</p></div>
+        <div class="box_two"> <p class="box_det">6.</p></div>
       </div>
-      <div class="box_right"> <p style="margin-left: 10px;">7.</p></div>
+      <div class="box_right"><p class="box_det">7.</p></div>
     </div>
     <div id="footer">
-      <div class="f_left"> <span style="font-size: 15px; padding-left: 20px; position: relative; bottom: 490px;">
-        법적고지 <strong><span style="color: darkorange;"> | </span></strong>
+      <div class="f_left"> <span class="f_menu">
+        법적고지 <strong><span class="f_bar"> | </span></strong>
         이메일무단수집거부 <strong><span style="color: darkorange;"> | </span></strong>
-        이용약관 <strong><span style="color: darkorange;"> | </span></strong>
-        개인정보취급방침 <strong><span style="color: darkorange;"> | </span></strong>
-        고객센터 <strong><span style="color: darkorange;"> | </span></strong>
+        이용약관 <strong><span class="f_bar"> | </span></strong>
+        개인정보취급방침 <strong><span class="f_bar"> | </span></strong>
+        고객센터 <strong><span class="f_bar"> | </span></strong>
         입찰공고</span></div>
-        <div style="width: 250px; height: 40px; background: pink; margin-left: 750px;float: right; position: relative; bottom: 500px;"> </div>
-    </div>
+      <div class="f_right"></div>
   </body>
 </html>
