--- a/index.html
+++ b/index.html
@@ -2,65 +2,68 @@
 <html>
   <head><title>main</title><meta charset="utf-8"></head>
   <style>
-    #header { width: 1240px; height: 120px; text-align: center;}
-    .h_menu {width: 155px; margin-top: 60px; float: left;}
-    .h_logo {width: 310px; margin-top: 33px; float: left;}
-    a:link { color: black; text-decoration: none;}
-    a:visited {color: black; text-decoration: none;}
-    a:hover{color: red; text-decoration: underline;}
-    #main_picture {height: 464px;}
-    .icon_title_text {width: 1240px; text-align: center;}
-    .icon_box {width: 1240px; text-align: center; margin-left: 20px;}
-    .icon_det {width: 250px; float: left; margin-left: 40px;}
-    .chefs {height: 304px; background-color: lightgrey; position: relative; top: 200px;}
-    .chefs_det {width: 814px; height: 304px; margin-left: 213px;}
-    .chefs_left {width: 500px; height: 100px; position: relative; bottom: 100px;}
-    .chefs_right {width: 300px; float: right; position: relative; bottom: 220px;}
+    a{text-decoration: none;}
+    li{list-style: none;}
+    #header { width: 100%; height: 120px; overflow: hidden; background: white; text-align: center;}
+    #header>ul{display:inline-block; height: 53px; overflow: hidden; margin-top: 33px;}
+    #header>ul>li{ float: left; padding-left: 10px; padding-right: 10px; line-height:30px;
+      margin-left: 30px; margin-right: 30px; margin-top: 27px;}
+    #header>ul>li>a{color: #000000;}
+    #header>ul>li:hover{ text-decoration: underline;}
+    #header>ul>li:hover a{ color: red;}
+    #header>ul>li:nth-child(4){margin-left: 70px;margin-right:70px; margin-top: 0px;}
+    #main_picture {width: 100%; height: 464px; overflow: hidden; background-image: url(main.png);
+       background-repeat: no-repeat; background-attachment: scroll; background-size: 100% 464px;
+       -webkit-box-shadow: inset 3px 2px 25px 10px rgba(0,0,0,0.8); box-shadow: inset 3px 2px 25px 10px rgba(0,0,0,0.8);}
+    .icon_title_text {line-height: 26px;text-align: center; overflow: hidden; margin-top: 30px; margin-bottom: 30px; font-size: 10px;}
+    .icon_title_text>span {font-size: 20px; font-weight: 700; line-height: 24px;}
+    .icon_box {width: 1240px; overflow: hidden; margin: 10px auto;}
+    .icon_box>p{width: 250px; float:left; margin-left: 30px; margin-right: 30px; overflow:hidden;
+    line-height: 25px; padding-top: 30px; padding-bottom: 30px; text-align:center; font-size:14px; border-bottom: 2px dotted gray;}
+    .chefs {width: 100%;height: 304px; background-color: lightgrey;overflow:hidden; margin-top: 30px; margin-bottom: 30px;}
+    .chefs>div{width: 814px; height: 304px; overflow: hidden; margin: 0px auto;}
+    .chefs>div>p{float: left; width: 500px; height: 100px; line-height: 26px; margin-top: 80px; overflow: hidden;}
+    .chefs>div>p>span { font-weight: 700; font-size: 24px; text-decoration: underline;}
+    .chefs>div>img{float:left; margin-left: 30px;}
   </style>
   <body>
-    <div id="header">
-        <p class="h_menu"><a href="#" target="_self">How it works</a></p>
-        <p class="h_menu"><a href="#" target="_self">Gifts</a></p>
-        <p class="h_menu"><a href="about.html" target="_blank">about</a></p>
-        <p class="h_logo"><img src="logo.png"></p>
-        <p class="h_menu"><a href="#" target="_self">Login</a></p>
-        <p class="h_menu"><a href="#" target="_self">Members</a></p>
-        <p class="h_menu"><a href="#" target="_self">Contacts</a></p>
-    </div>
-    <div id="main_picture"><img src="main.png"> </div>
+    <div id="header"><ul>
+        <li><a href="#">How it works</a></li>
+        <li><a href="#">Gifts</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><img src="logo.png"></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Members</a></li>
+        <li><a href="#">Contacts</a></li>
+    </ul></div>
+    <div id="main_picture"></div>
     <p class="icon_title_text">
       "WHAT'S FOR DINNER"<br>
-      <strong><span style="font-size: 30px;">FINALLY HAS AN<br>EASY ANSWER</span><br></strong>
-    </div>
+      <span> FINALLY HAS AN<br>EASY ANSWER</span></p>
     <div class="icon_box">
-      <p class="icon_det">
+      <p>
         <img src="icon1.png"><br>books<br>1. chefbooks aksdjflasjdfljlkjasdfa
-        <br>2. guideline asdfasdfsdfsdfasdfasdfasfsdfe<br><br>
-        ........................................................................
+        <br>2. guideline asdfasdfsdfsdfasdfasdfasfsdfe<br>
       </p>
-      <p class="icon_det">
+      <p>
         <img src="icon2.png"><br>brain<br>1. brainstorm aksdjflasjdfljlkjasdfa
-        <br>2. guideline asdfasdfsdfsdfasdfasdfasfsdfe<br><br>
-        ........................................................................
+        <br>2. guideline asdfasdfsdfsdfasdfasdfasfsdfe<br>
       </p>
-      <p class="icon_det">
+      <p>
         <img src="icon3.png"><br>time<br>1. timekeep aksdjflasjdfljlkjasdfa
-        <br>2. guideline asdfasdfsdfsdfasdfasdfasfsdfe<br><br>
-        ........................................................................
+        <br>2. guideline asdfasdfsdfsdfasdfasdfasfsdfe<br>
       </p>
-      <p class="icon_det">
+      <p>
         <img src="icon4.png"><br>location<br>1. mapcheck aksdjflasjdfljlkjasdfa
-        <br>2. guideline asdfasdfsdfsdfasdfasdfasfsdfe<br><br>
-        ........................................................................
+        <br>2. guideline asdfasdfsdfsdfasdfasdfasfsdfe<br>
       </p>
     </div>
-    <div class="chefs"><div class="chefs_det">
-        <p class="chefs_left">
-          주방장: 오원석<br>
+    <div class="chefs"><div><p>
+          <span>주방장: 오원석</span><br>
           저희 음식은 식재료도 신선하고 당일 모든 재료가 마감됩니다!<br>
           모두들 오셔서 드셔보세요!<br>
           안 오시면 후회합니다!</p>
-        <p class="chefs_right"><img src="chef.png"></p></div>
+        <img src="chef.png"></div>
     </div>
   </body>
 </html>
